--- a/字串II/字串II.vcxproj.filters
+++ b/字串II/字串II.vcxproj.filters
@@ -24,18 +24,12 @@
     <ClInclude Include="targetver.h">
       <Filter>標頭檔</Filter>
     </ClInclude>
-    <ClInclude Include="字符串.h">
-      <Filter>標頭檔</Filter>
-    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="stdafx.cpp">
       <Filter>原始程式檔</Filter>
     </ClCompile>
-    <ClCompile Include="字符串.c">
-      <Filter>原始程式檔</Filter>
-    </ClCompile>
-    <ClCompile Include="main.c">
+    <ClCompile Include="字串II.c">
       <Filter>原始程式檔</Filter>
     </ClCompile>
   </ItemGroup>
