--- a/結構體/結構體.vcxproj
+++ b/結構體/結構體.vcxproj
@@ -158,6 +158,7 @@
     <ClCompile Include="struct.c">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
     </ClCompile>
+    <ClCompile Include="字節對齊.c" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
