--- a/結構體/結構體.vcxproj.filters
+++ b/結構體/結構體.vcxproj.filters
@@ -32,5 +32,8 @@
     <ClCompile Include="struct.c">
       <Filter>原始程式檔</Filter>
     </ClCompile>
+    <ClCompile Include="字節對齊.c">
+      <Filter>原始程式檔</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
