--- a/指針/指針.vcxproj.filters
+++ b/指針/指針.vcxproj.filters
@@ -35,5 +35,8 @@
     <ClCompile Include="二級指針.c">
       <Filter>原始程式檔</Filter>
     </ClCompile>
+    <ClCompile Include="test.c">
+      <Filter>原始程式檔</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
