--- a/結構體/結構體.vcxproj.filters
+++ b/結構體/結構體.vcxproj.filters
@@ -24,6 +24,9 @@
     <ClInclude Include="targetver.h">
       <Filter>標頭檔</Filter>
     </ClInclude>
+    <ClInclude Include="Typedef_.h">
+      <Filter>標頭檔</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="stdafx.cpp">
@@ -33,6 +36,9 @@
       <Filter>原始程式檔</Filter>
     </ClCompile>
     <ClCompile Include="字節對齊.c">
+      <Filter>原始程式檔</Filter>
+    </ClCompile>
+    <ClCompile Include="typedef.c">
       <Filter>原始程式檔</Filter>
     </ClCompile>
   </ItemGroup>
