--- a/位運算/位運算.vcxproj.filters
+++ b/位運算/位運算.vcxproj.filters
@@ -15,24 +15,7 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <Text Include="ReadMe.txt" />
-  </ItemGroup>
-  <ItemGroup>
-    <ClInclude Include="stdafx.h">
-      <Filter>標頭檔</Filter>
-    </ClInclude>
-    <ClInclude Include="targetver.h">
-      <Filter>標頭檔</Filter>
-    </ClInclude>
-  </ItemGroup>
-  <ItemGroup>
-    <ClCompile Include="stdafx.cpp">
-      <Filter>原始程式檔</Filter>
-    </ClCompile>
-    <ClCompile Include="二級指針.c">
-      <Filter>原始程式檔</Filter>
-    </ClCompile>
-    <ClCompile Include="test.c">
+    <ClCompile Include="邏輯運算.c">
       <Filter>原始程式檔</Filter>
     </ClCompile>
   </ItemGroup>
