--- a/CPlus/習題.cpp/習題.cpp.vcxproj.filters
+++ b/CPlus/習題.cpp/習題.cpp.vcxproj.filters
@@ -39,6 +39,9 @@
     <ClCompile Include="Exam7.34_Overload.cpp">
       <Filter>原始程式檔</Filter>
     </ClCompile>
+    <ClCompile Include="Exam8.6.cpp">
+      <Filter>原始程式檔</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="My_Sales.h">
