--- a/CPlus/關聯式容器/關聯式容器.vcxproj.filters
+++ b/CPlus/關聯式容器/關聯式容器.vcxproj.filters
@@ -15,25 +15,10 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="iostream.cpp">
+    <ClCompile Include="pair.cpp">
       <Filter>原始程式檔</Filter>
     </ClCompile>
-    <ClCompile Include="condition stats.cpp">
-      <Filter>原始程式檔</Filter>
-    </ClCompile>
-    <ClCompile Include="set and clear iostate.cpp">
-      <Filter>原始程式檔</Filter>
-    </ClCompile>
-    <ClCompile Include="清空緩衝區.cpp">
-      <Filter>原始程式檔</Filter>
-    </ClCompile>
-    <ClCompile Include="fstream檔案開啟關閉.cpp">
-      <Filter>原始程式檔</Filter>
-    </ClCompile>
-    <ClCompile Include="fstream連續讀取.cpp">
-      <Filter>原始程式檔</Filter>
-    </ClCompile>
-    <ClCompile Include="..\CPlus\istringstream用法.cpp">
+    <ClCompile Include="map.cpp">
       <Filter>原始程式檔</Filter>
     </ClCompile>
   </ItemGroup>
