--- a/CPlus/循序式容器/循序式容器.vcxproj.filters
+++ b/CPlus/循序式容器/循序式容器.vcxproj.filters
@@ -18,10 +18,16 @@
     <ClCompile Include="初始化.cpp">
       <Filter>原始程式檔</Filter>
     </ClCompile>
-    <ClCompile Include="insert and erase.cpp">
+    <ClCompile Include="容器肩負值與調換assign and swap.cpp">
       <Filter>原始程式檔</Filter>
     </ClCompile>
-    <ClCompile Include="assign and swap.cpp">
+    <ClCompile Include="容器增加與移除元素insert and erase.cpp">
+      <Filter>原始程式檔</Filter>
+    </ClCompile>
+    <ClCompile Include="容器增長Capacity and reserce.cpp">
+      <Filter>原始程式檔</Filter>
+    </ClCompile>
+    <ClCompile Include="string.cpp">
       <Filter>原始程式檔</Filter>
     </ClCompile>
   </ItemGroup>
