--- a/CPlus/習題.cpp/習題.cpp.vcxproj.filters
+++ b/CPlus/習題.cpp/習題.cpp.vcxproj.filters
@@ -45,6 +45,9 @@
     <ClCompile Include="Exam9.2.1.cpp">
       <Filter>原始程式檔</Filter>
     </ClCompile>
+    <ClCompile Include="Exam10.1.cpp">
+      <Filter>原始程式檔</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="My_Sales.h">
