--- a/CPlus/IO輸入輸出stream/IO輸入輸出stream.vcxproj.filters
+++ b/CPlus/IO輸入輸出stream/IO輸入輸出stream.vcxproj.filters
@@ -33,7 +33,10 @@
     <ClCompile Include="fstream連續讀取.cpp">
       <Filter>原始程式檔</Filter>
     </ClCompile>
-    <ClCompile Include="..\CPlus\istringstream用法.cpp">
+    <ClCompile Include="..\CPlus\stringstream用法.cpp">
+      <Filter>原始程式檔</Filter>
+    </ClCompile>
+    <ClCompile Include="檔案輸入與輸出.cpp">
       <Filter>原始程式檔</Filter>
     </ClCompile>
   </ItemGroup>
