--- a/CPlus/關聯式容器/關聯式容器.vcxproj
+++ b/CPlus/關聯式容器/關聯式容器.vcxproj
@@ -147,7 +147,10 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="map.cpp" />
+    <ClCompile Include="Multimap and Multiset.cpp" />
     <ClCompile Include="pair.cpp" />
+    <ClCompile Include="set.cpp" />
+    <ClCompile Include="字符替換.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
