--- a/CPlus/關聯式容器/關聯式容器.vcxproj.filters
+++ b/CPlus/關聯式容器/關聯式容器.vcxproj.filters
@@ -21,5 +21,14 @@
     <ClCompile Include="map.cpp">
       <Filter>原始程式檔</Filter>
     </ClCompile>
+    <ClCompile Include="字符替換.cpp">
+      <Filter>原始程式檔</Filter>
+    </ClCompile>
+    <ClCompile Include="set.cpp">
+      <Filter>原始程式檔</Filter>
+    </ClCompile>
+    <ClCompile Include="Multimap and Multiset.cpp">
+      <Filter>原始程式檔</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
