--- a/文件處理/文件處理.vcxproj.filters
+++ b/文件處理/文件處理.vcxproj.filters
@@ -39,7 +39,7 @@
     <ClCompile Include="ftell and fseek 文件定位與查找.c">
       <Filter>原始程式檔</Filter>
     </ClCompile>
-    <ClCompile Include="fseek.c">
+    <ClCompile Include="文件型結構體.c">
       <Filter>原始程式檔</Filter>
     </ClCompile>
   </ItemGroup>
