--- a/CPlus/CPlus/CPlus.vcxproj.filters
+++ b/CPlus/CPlus/CPlus.vcxproj.filters
@@ -41,5 +41,8 @@
     <ClCompile Include="inline.cpp">
       <Filter>原始程式檔</Filter>
     </ClCompile>
+    <ClCompile Include="new.cpp">
+      <Filter>原始程式檔</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
