--- a/CPlus/演算法/演算法.vcxproj.filters
+++ b/CPlus/演算法/演算法.vcxproj.filters
@@ -15,7 +15,16 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="accumulatepp.cpp">
+    <ClCompile Include="fill 與 fill_n.cpp">
+      <Filter>原始程式檔</Filter>
+    </ClCompile>
+    <ClCompile Include="accumulate.cpp">
+      <Filter>原始程式檔</Filter>
+    </ClCompile>
+    <ClCompile Include="copy.cpp">
+      <Filter>原始程式檔</Filter>
+    </ClCompile>
+    <ClCompile Include="sort.cpp">
       <Filter>原始程式檔</Filter>
     </ClCompile>
   </ItemGroup>
