--- a/CPlus/演算法/演算法.vcxproj.filters
+++ b/CPlus/演算法/演算法.vcxproj.filters
@@ -27,5 +27,14 @@
     <ClCompile Include="sort.cpp">
       <Filter>原始程式檔</Filter>
     </ClCompile>
+    <ClCompile Include="Insert Iterator.cpp">
+      <Filter>原始程式檔</Filter>
+    </ClCompile>
+    <ClCompile Include="iostream iterator.cpp">
+      <Filter>原始程式檔</Filter>
+    </ClCompile>
+    <ClCompile Include="reverse_iterator.cpp">
+      <Filter>原始程式檔</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
