--- a/CPlus/Class定義與宣告/Class定義與宣告.vcxproj
+++ b/CPlus/Class定義與宣告/Class定義與宣告.vcxproj
@@ -76,6 +76,9 @@
       <Optimization>Disabled</Optimization>
       <SDLCheck>true</SDLCheck>
     </ClCompile>
+    <Link>
+      <Profile>true</Profile>
+    </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <ClCompile>
@@ -83,6 +86,9 @@
       <Optimization>Disabled</Optimization>
       <SDLCheck>true</SDLCheck>
     </ClCompile>
+    <Link>
+      <Profile>true</Profile>
+    </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
     <ClCompile>
@@ -111,7 +117,13 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="class宣告與定義.cpp" />
+    <ClCompile Include="class成員函式.cpp" />
     <ClCompile Include="class標籤.cpp" />
+    <ClCompile Include="class重載.cpp" />
+    <ClCompile Include="class隱式參數this.cpp" />
+    <ClCompile Include="inline內嵌函數.cpp" />
+    <ClCompile Include="Overload重載.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
