--- a/CPlus/實驗用/實驗用.vcxproj.filters
+++ b/CPlus/實驗用/實驗用.vcxproj.filters
@@ -15,25 +15,10 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="class標籤.cpp">
+    <ClCompile Include="123.cpp">
       <Filter>原始程式檔</Filter>
     </ClCompile>
-    <ClCompile Include="inline內嵌函數.cpp">
-      <Filter>原始程式檔</Filter>
-    </ClCompile>
-    <ClCompile Include="class成員函式.cpp">
-      <Filter>原始程式檔</Filter>
-    </ClCompile>
-    <ClCompile Include="Overload重載.cpp">
-      <Filter>原始程式檔</Filter>
-    </ClCompile>
-    <ClCompile Include="class重載.cpp">
-      <Filter>原始程式檔</Filter>
-    </ClCompile>
-    <ClCompile Include="class宣告與定義.cpp">
-      <Filter>原始程式檔</Filter>
-    </ClCompile>
-    <ClCompile Include="class隱式參數this.cpp">
+    <ClCompile Include="classA.cpp">
       <Filter>原始程式檔</Filter>
     </ClCompile>
   </ItemGroup>
