--- a/CPlus/習題.cpp/習題.cpp.vcxproj.filters
+++ b/CPlus/習題.cpp/習題.cpp.vcxproj.filters
@@ -60,10 +60,19 @@
     <ClCompile Include="..\演算法\Exam11.3.3.cpp">
       <Filter>原始程式檔</Filter>
     </ClCompile>
+    <ClCompile Include="Exam12.1.cpp">
+      <Filter>原始程式檔</Filter>
+    </ClCompile>
+    <ClCompile Include="Exam12.13.cpp">
+      <Filter>原始程式檔</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="My_Sales.h">
       <Filter>標頭檔</Filter>
     </ClInclude>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="packages.config" />
   </ItemGroup>
 </Project>
