--- a/CPlus/Class定義與宣告/Class定義與宣告.vcxproj.filters
+++ b/CPlus/Class定義與宣告/Class定義與宣告.vcxproj.filters
@@ -36,5 +36,11 @@
     <ClCompile Include="class隱式參數this.cpp">
       <Filter>原始程式檔</Filter>
     </ClCompile>
+    <ClCompile Include="class作用域.cpp">
+      <Filter>原始程式檔</Filter>
+    </ClCompile>
+    <ClCompile Include="class建構式初值器%28p453%29.cpp">
+      <Filter>原始程式檔</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
