--- a/CPlus/TEST/TEST.vcxproj
+++ b/CPlus/TEST/TEST.vcxproj
@@ -140,6 +140,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="class1.cpp" />
+    <ClCompile Include="class2.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
