--- a/CPlus/TEST/TEST.vcxproj.filters
+++ b/CPlus/TEST/TEST.vcxproj.filters
@@ -18,5 +18,8 @@
     <ClCompile Include="class1.cpp">
       <Filter>原始程式檔</Filter>
     </ClCompile>
+    <ClCompile Include="class2.cpp">
+      <Filter>原始程式檔</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
