--- a/CPlus/Class定義與宣告/Class定義與宣告.vcxproj.filters
+++ b/CPlus/Class定義與宣告/Class定義與宣告.vcxproj.filters
@@ -42,5 +42,8 @@
     <ClCompile Include="class建構式初值器%28p453%29.cpp">
       <Filter>原始程式檔</Filter>
     </ClCompile>
+    <ClCompile Include="class隱式轉換.cpp">
+      <Filter>原始程式檔</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
