--- a/CPlus/習題.cpp/習題.cpp.vcxproj
+++ b/CPlus/習題.cpp/習題.cpp.vcxproj
@@ -34,6 +34,7 @@
     <ClCompile Include="Exam12.18.cpp" />
     <ClCompile Include="Exam12.19.cpp" />
     <ClCompile Include="Exam12.23.cpp" />
+    <ClCompile Include="Exam12.24.cpp" />
     <ClCompile Include="Exam7.34_Overload.cpp" />
     <ClCompile Include="Exam8.6.cpp" />
     <ClCompile Include="Exam9.2.1.cpp" />
