--- a/CPlus/TEST/TEST.vcxproj
+++ b/CPlus/TEST/TEST.vcxproj
@@ -142,6 +142,7 @@
     <ClCompile Include="class1.cpp" />
     <ClCompile Include="class2.cpp" />
     <ClCompile Include="class3.cpp" />
+    <ClCompile Include="String.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
