--- a/CPlus/TEST/TEST.vcxproj.filters
+++ b/CPlus/TEST/TEST.vcxproj.filters
@@ -24,5 +24,8 @@
     <ClCompile Include="class3.cpp">
       <Filter>原始程式檔</Filter>
     </ClCompile>
+    <ClCompile Include="String.cpp">
+      <Filter>原始程式檔</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
